# ollama-fastAPI-rust-chat

./: .gitignore  README.md  docker-compose.yml  start-llama.sh  start-ollama.sh
client/: .env-example  README.md  index.html
client/src/components/llamachat/: ChatMessage.tsx  ChatWidget.tsx  LlamaProvider.tsx  ModelSelector.tsx  index.ts  types.ts
client/src/components/ollama/: ModelSelector.tsx  OllamaChatWidget.tsx  OllamaProvider.tsx  index.ts  types.ts
client/src/integrations/supabase/: types.ts
client/src/pages/: Index.tsx
server/FastAPI/: fastAPI.py
server/RUST/: Dockerfile
server/RUST/src/: main.rs
server/RUST_TAURI/ollama_server/: Cargo.toml  Dockerfile  topics.txt
server/RUST_TAURI/ollama_server/src/: main.rs
server/llama-cpp/: Dockerfile
