[package]
name = "llammacpp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = "0.4"
